feat(-): 新增部分页面展示

--- a/project.config.json
+++ b/project.config.json
@@ -1,8 +1,8 @@
 {
   "miniprogramRoot": "./dist",
-  "projectname": "taro开发小程序",
-  "description": "",
-  "appid": "wx6d13035910b84f98",
+  "projectname": "taro-mobile",
+  "description": "taro-mobile",
+  "appid": "wx7aea30c463eff9b2",
   "setting": {
     "urlCheck": true,
     "es6": false,
