--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,7 @@
 # 配置文档参考 https://taro-docs.jd.com/docs/next/env-mode-config
 # TARO_APP_ID="开发环境下的小程序appid"
 TARO_APP_ID="wx6d13035910b84f98"
+# 网易云请求
+TARO_APP_BASEURL = 'http://localhost:3000'
+# 头条请求
+TARO_APP_TOUTIAO = 'https://toutiao.itheima.net/v1_0'
