--- a/.env.dev
+++ b/.env.dev
@@ -2,6 +2,6 @@
 # TARO_APP_ID="开发环境下的小程序appid"
 TARO_APP_ID="wx6d13035910b84f98"
 # 网易云请求
-TARO_APP_BASEURL = 'http://localhost:3000'
+TARO_APP_BASEURL = 'http://8.130.86.37:8006/api'
 # 头条请求
-TARO_APP_TOUTIAO = 'https://toutiao.itheima.net/v1_0'
+TARO_APP_TOUTIAO = 'http://8.130.86.37:8006/api'
