--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "axios": "^1.6.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
@@ -92,6 +93,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.1.0",
-    "webpack": "5.78.0"
+    "webpack": "5.78.0",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
