--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@babel/runtime": "^7.21.5",
     "@nutui/icons-react-taro": "^1.0.2",
     "@nutui/nutui-react-taro": "^2.4.1",
-    "@reduxjs/toolkit": "^2.2.3",
+    "@reduxjs/toolkit": "^2.2.4",
     "@tarojs/components": "3.6.24",
     "@tarojs/helper": "3.6.24",
     "@tarojs/plugin-framework-react": "3.6.24",
@@ -56,14 +56,16 @@
     "@tarojs/plugin-platform-swan": "3.6.24",
     "@tarojs/plugin-platform-tt": "3.6.24",
     "@tarojs/plugin-platform-weapp": "3.6.24",
-    "@tarojs/react": "3.6.24",
+    "@tarojs/react": "^3.6.29",
+    "@tarojs/redux": "^2.2.10",
+    "@tarojs/redux-h5": "^2.2.10",
     "@tarojs/runtime": "3.6.24",
     "@tarojs/shared": "3.6.24",
     "@tarojs/taro": "3.6.24",
     "axios": "^1.6.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
   "devDependencies": {
