--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   ],
   "author": "",
   "dependencies": {
+    "@antv/f-wx": "^1.3.0",
+    "@antv/f2": "^5.4.5",
     "@babel/runtime": "^7.21.5",
     "@nutui/icons-react-taro": "^1.0.2",
     "@nutui/nutui-react-taro": "^2.4.1",
