chore(-): 打包脚本调整

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "framework": "React"
   },
   "scripts": {
-    "build:weapp": "taro build --type weapp --mode dev",
-    "build:h5": "taro build --type h5 --mode dev",
+    "build:weapp": "taro build --type weapp --mode prod",
+    "build:h5": "taro build --type h5 --mode prod",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
     "build:tt": "taro build --type tt",
@@ -20,11 +20,11 @@
     "build:jd": "taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
     "build:harmony-hybrid": "taro build --type harmony-hybrid",
-    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:weapp": "taro build --type weapp --mode dev --watch",
+    "dev:h5": "taro build --type h5 --mode dev --watch",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
     "dev:tt": "npm run build:tt -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
