--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,2 @@
-# 配置文档参考 https://taro-docs.jd.com/docs/next/env-mode-config
-# TARO_APP_ID="开发环境下的小程序appid"
 TARO_APP_ID="wx6d13035910b84f98"
-TARO_APP_BASEURL = 'https://www.bobdata.cn'
+TARO_APP_BASEURL = 'http://8.130.86.37:8009'
