--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "./dist",
   "projectname": "taro-mobile",
   "description": "taro-mobile",
-  "appid": "wx7aea30c463eff9b2",
+  "appid": "wx6d13035910b84f98",
   "setting": {
     "urlCheck": true,
     "es6": false,
