--- a/project.tt.json
+++ b/project.tt.json
@@ -1,7 +1,7 @@
 {
   "miniprogramRoot": "./",
   "projectname": "taro-mobile",
-  "appid": "wx7aea30c463eff9b2",
+  "appid": "wx6d13035910b84f98",
   "setting": {
     "es6": false,
     "minified": false
